Closed
Bug 196404
Opened 22 years ago
Closed 22 years ago
setting document.location.href while showing about:blank broken
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
People
(Reporter: dbaron, Assigned: keeda)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
1.50 KB,
patch
|
radha
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
Setting document.location.href from a bookmarklet is now broken if the current
page being shown is about:blank. This is a regression caused by radha's checkin
to nsLocation.cpp, revision 1.107, for bug 162128.
Steps to reproduce:
1. bookmark the URL (perhaps in the personal toolbar):
javascript:void(id=prompt('Show Mozilla bug
no.',''));if(id){void(location.href='http://bugzilla.mozilla.org/show_bug.cgi?id='+escape(id)+'
')}
2. load about:blank in a Window (I'm using Phoenix, but I'd guess it doesn't
matter whether one uses Phoenix or Mozilla)
3. Click the bookmark.
4. Type a bug number into the alert.
Expected results:
* load that bug number
Actual results:
* error on JS console saying that nsIDOMLocation.href setter returned
NS_ERROR_FAILURE.
| Reporter | ||
Updated•22 years ago
|
| Assignee | ||
Comment 1•22 years ago
|
||
Restores old behavior if the attempt to figure out a "more useful" base URI
doesnt work. (In this particular case, we have a root docshell with a
about:blank uri. FindUsableBaseURI() really cant do anything smart.)
| Assignee | ||
Updated•22 years ago
|
Attachment #116695 -
Flags: superreview?(jst)
Attachment #116695 -
Flags: review?(radha)
| Reporter | ||
Updated•22 years ago
|
Attachment #116695 -
Flags: superreview?(jst) → superreview+
Comment 2•22 years ago
|
||
Blocking 1.4a since it's a regression and we hate those.
Flags: blocking1.4a+
Updated•22 years ago
|
Attachment #116695 -
Flags: review?(radha) → review+
| Assignee | ||
Comment 4•22 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•