bug 196404 : setting document.location.href while showing about:blank broken  r=radha sr=dbaron